[08] Fix player 2 songs list alignment

--- a/08 - Music Player/style.css
+++ b/08 - Music Player/style.css
@@ -248,7 +248,8 @@ body{
     margin-top: 30px;
 }
 
-.player-2-top-bar div:nth-child(2){
+.player-2-top-bar div:nth-child(2), .dot{
+    display: inline-block;
     width: 1px;
     height: 1px;
     margin: 0 2px;
@@ -260,7 +261,11 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 40px 25px;
+    margin: 40px 20px;
+}
+
+.player-2-now-playing-button:first-child svg {
+    width: 8px;
 }
 
 .player-2-now-playing-button{
@@ -332,8 +337,8 @@ body{
     justify-content: space-between;
     align-items: center;
 
-    padding: 8px 10px;
-    margin: 2px 20px;
+    padding: 10px 10px;
+    margin: 2px 10px;
     border-radius: 10px;
 
     cursor: pointer;
@@ -353,13 +358,15 @@ body{
 }
 
 .player-2-song-meta div:first-child{
-    font-weight: 600;
-    font-size: 10px;
+    font-weight: 500;
+    font-size: 9px;
 }
 
 .player-2-song-meta div:last-child{
+    display: flex;
+    align-items: center;
     font-weight: 300;
-    font-size: 8px;
+    font-size: 7px;
 }
 
 
